impl_parser/Poly/app/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from Parser.y
-----------------------------------------------------------------------------

state 74 contains 1 shift/reduce conflicts.
state 80 contains 1 shift/reduce conflicts.
state 97 contains 1 shift/reduce conflicts.
state 98 contains 1 shift/reduce conflicts.
state 99 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseTypTokens -> typ                       (0)
	%start_parseTermTokens -> term                     (1)
	typ -> TopType EOF                                 (2)
	TopType -> FORALL IDENT DOT TopType                (3)
	TopType -> UncOrArrType                            (4)
	UncOrArrType -> LBRACE TopTypeList RBRACE ARROW TopType   (5)
	UncOrArrType -> ProdType ARROW TopType             (6)
	UncOrArrType -> ProdType                           (7)
	TopTypeList -> TopType COMMA TopTypeList           (8)
	TopTypeList -> TopType                             (9)
	ProdType -> ProdType STAR AppType                  (10)
	ProdType -> AppType                                (11)
	AppType -> TSTKW AtomType AtomType                 (12)
	AppType -> AtomType                                (13)
	AtomType -> TINTKW                                 (14)
	AtomType -> TBOOLKW                                (15)
	AtomType -> IDENT                                  (16)
	AtomType -> LBRACK TopType RBRACK                  (17)
	AtomType -> LPAREN TopType RPAREN                  (18)
	term -> Term EOF                                   (19)
	Term -> AppTerm                                    (20)
	Term -> LAMBDA IDENT DOT Term                      (21)
	Term -> LAMBDA IDENT COLON TopType DOT Term        (22)
	Term -> LAMBDA LBRACE IdentList RBRACE DOT Term    (23)
	Term -> LAMBDA LBRACE AnnotList RBRACE DOT Term    (24)
	Term -> BIGLAM IDENT DOT Term                      (25)
	Term -> Term COLON TopType                         (26)
	AppTerm -> AppTerm AtomTerm                        (27)
	AppTerm -> AppTerm AT TopType                      (28)
	AppTerm -> AppTerm LBRACE TermList RBRACE          (29)
	AppTerm -> FST AtomTerm                            (30)
	AppTerm -> SND AtomTerm                            (31)
	AppTerm -> AtomTerm                                (32)
	AtomTerm -> NAT                                    (33)
	AtomTerm -> TRUE                                   (34)
	AtomTerm -> FALSE                                  (35)
	AtomTerm -> IDENT                                  (36)
	AtomTerm -> NIL                                    (37)
	AtomTerm -> CONS                                   (38)
	AtomTerm -> LANGLE Term COMMA Term RANGLE          (39)
	AtomTerm -> LPAREN Term RPAREN                     (40)
	TermList -> Term COMMA TermList                    (41)
	TermList -> Term                                   (42)
	IdentList -> IDENT COMMA IdentList                 (43)
	IdentList -> IDENT                                 (44)
	AnnotList -> IDENT COLON TopType COMMA AnnotList   (45)
	AnnotList -> IDENT COLON TopType                   (46)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	FORALL         { TForall }
	DOT            { TDot }
	ARROW          { TArrow }
	STAR           { TStar }
	COLON          { TColon }
	AT             { TAt }
	LANGLE         { TLAngle }
	RANGLE         { TRAngle }
	LBRACE         { TLBrace }
	RBRACE         { TRBrace }
	LBRACK         { TLBracket }
	RBRACK         { TRBracket }
	LPAREN         { TLParen }
	RPAREN         { TRParen }
	COMMA          { TComma }
	LAMBDA         { TLambda }
	BIGLAM         { TBigLambda }
	TINTKW         { TIntKw }
	TBOOLKW        { TBoolKw }
	TSTKW          { TStKw }
	TRUE           { TTrueKw }
	FALSE          { TFalseKw }
	NIL            { TNilKw }
	CONS           { TConsKw }
	FST            { TFstKw }
	SND            { TSndKw }
	NAT            { TNat $$ }
	IDENT          { TIdent $$ }
	EOF            { TEOF }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseTypTokens rule  0
	%start_parseTermTokens rule  1
	typ             rule  2
	TopType         rules 3, 4
	UncOrArrType    rules 5, 6, 7
	TopTypeList     rules 8, 9
	ProdType        rules 10, 11
	AppType         rules 12, 13
	AtomType        rules 14, 15, 16, 17, 18
	term            rule  19
	Term            rules 20, 21, 22, 23, 24, 25, 26
	AppTerm         rules 27, 28, 29, 30, 31, 32
	AtomTerm        rules 33, 34, 35, 36, 37, 38, 39, 40
	TermList        rules 41, 42
	IdentList       rules 43, 44
	AnnotList       rules 45, 46

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseTypTokens -> . typ                      (rule 0)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	typ            goto state 32
	TopType        goto state 3
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 1

	%start_parseTermTokens -> . term                    (rule 1)

	LANGLE         shift, and enter state 20
	LPAREN         shift, and enter state 21
	LAMBDA         shift, and enter state 22
	BIGLAM         shift, and enter state 23
	TRUE           shift, and enter state 24
	FALSE          shift, and enter state 25
	NIL            shift, and enter state 26
	CONS           shift, and enter state 27
	FST            shift, and enter state 28
	SND            shift, and enter state 29
	NAT            shift, and enter state 30
	IDENT          shift, and enter state 31

	term           goto state 16
	Term           goto state 17
	AppTerm        goto state 18
	AtomTerm       goto state 19

State 2

	typ -> . TopType EOF                                (rule 2)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 3
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 3

	typ -> TopType . EOF                                (rule 2)

	EOF            shift, and enter state 53


State 4

	TopType -> UncOrArrType .                           (rule 4)

	DOT            reduce using rule 4
	COLON          reduce using rule 4
	AT             reduce using rule 4
	LANGLE         reduce using rule 4
	RANGLE         reduce using rule 4
	LBRACE         reduce using rule 4
	RBRACE         reduce using rule 4
	RBRACK         reduce using rule 4
	LPAREN         reduce using rule 4
	RPAREN         reduce using rule 4
	COMMA          reduce using rule 4
	TRUE           reduce using rule 4
	FALSE          reduce using rule 4
	NIL            reduce using rule 4
	CONS           reduce using rule 4
	NAT            reduce using rule 4
	IDENT          reduce using rule 4
	EOF            reduce using rule 4


State 5

	UncOrArrType -> ProdType . ARROW TopType            (rule 6)
	UncOrArrType -> ProdType .                          (rule 7)
	ProdType -> ProdType . STAR AppType                 (rule 10)

	DOT            reduce using rule 7
	ARROW          shift, and enter state 51
	STAR           shift, and enter state 52
	COLON          reduce using rule 7
	AT             reduce using rule 7
	LANGLE         reduce using rule 7
	RANGLE         reduce using rule 7
	LBRACE         reduce using rule 7
	RBRACE         reduce using rule 7
	RBRACK         reduce using rule 7
	LPAREN         reduce using rule 7
	RPAREN         reduce using rule 7
	COMMA          reduce using rule 7
	TRUE           reduce using rule 7
	FALSE          reduce using rule 7
	NIL            reduce using rule 7
	CONS           reduce using rule 7
	NAT            reduce using rule 7
	IDENT          reduce using rule 7
	EOF            reduce using rule 7


State 6

	ProdType -> AppType .                               (rule 11)

	DOT            reduce using rule 11
	ARROW          reduce using rule 11
	STAR           reduce using rule 11
	COLON          reduce using rule 11
	AT             reduce using rule 11
	LANGLE         reduce using rule 11
	RANGLE         reduce using rule 11
	LBRACE         reduce using rule 11
	RBRACE         reduce using rule 11
	RBRACK         reduce using rule 11
	LPAREN         reduce using rule 11
	RPAREN         reduce using rule 11
	COMMA          reduce using rule 11
	TRUE           reduce using rule 11
	FALSE          reduce using rule 11
	NIL            reduce using rule 11
	CONS           reduce using rule 11
	NAT            reduce using rule 11
	IDENT          reduce using rule 11
	EOF            reduce using rule 11


State 7

	AppType -> AtomType .                               (rule 13)

	DOT            reduce using rule 13
	ARROW          reduce using rule 13
	STAR           reduce using rule 13
	COLON          reduce using rule 13
	AT             reduce using rule 13
	LANGLE         reduce using rule 13
	RANGLE         reduce using rule 13
	LBRACE         reduce using rule 13
	RBRACE         reduce using rule 13
	RBRACK         reduce using rule 13
	LPAREN         reduce using rule 13
	RPAREN         reduce using rule 13
	COMMA          reduce using rule 13
	TRUE           reduce using rule 13
	FALSE          reduce using rule 13
	NIL            reduce using rule 13
	CONS           reduce using rule 13
	NAT            reduce using rule 13
	IDENT          reduce using rule 13
	EOF            reduce using rule 13


State 8

	TopType -> FORALL . IDENT DOT TopType               (rule 3)

	IDENT          shift, and enter state 50


State 9

	UncOrArrType -> LBRACE . TopTypeList RBRACE ARROW TopType    (rule 5)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 48
	UncOrArrType   goto state 4
	TopTypeList    goto state 49
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 10

	AtomType -> LBRACK . TopType RBRACK                 (rule 17)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 47
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 11

	AtomType -> LPAREN . TopType RPAREN                 (rule 18)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 46
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 12

	AtomType -> TINTKW .                                (rule 14)

	DOT            reduce using rule 14
	ARROW          reduce using rule 14
	STAR           reduce using rule 14
	COLON          reduce using rule 14
	AT             reduce using rule 14
	LANGLE         reduce using rule 14
	RANGLE         reduce using rule 14
	LBRACE         reduce using rule 14
	RBRACE         reduce using rule 14
	LBRACK         reduce using rule 14
	RBRACK         reduce using rule 14
	LPAREN         reduce using rule 14
	RPAREN         reduce using rule 14
	COMMA          reduce using rule 14
	TINTKW         reduce using rule 14
	TBOOLKW        reduce using rule 14
	TRUE           reduce using rule 14
	FALSE          reduce using rule 14
	NIL            reduce using rule 14
	CONS           reduce using rule 14
	NAT            reduce using rule 14
	IDENT          reduce using rule 14
	EOF            reduce using rule 14


State 13

	AtomType -> TBOOLKW .                               (rule 15)

	DOT            reduce using rule 15
	ARROW          reduce using rule 15
	STAR           reduce using rule 15
	COLON          reduce using rule 15
	AT             reduce using rule 15
	LANGLE         reduce using rule 15
	RANGLE         reduce using rule 15
	LBRACE         reduce using rule 15
	RBRACE         reduce using rule 15
	LBRACK         reduce using rule 15
	RBRACK         reduce using rule 15
	LPAREN         reduce using rule 15
	RPAREN         reduce using rule 15
	COMMA          reduce using rule 15
	TINTKW         reduce using rule 15
	TBOOLKW        reduce using rule 15
	TRUE           reduce using rule 15
	FALSE          reduce using rule 15
	NIL            reduce using rule 15
	CONS           reduce using rule 15
	NAT            reduce using rule 15
	IDENT          reduce using rule 15
	EOF            reduce using rule 15


State 14

	AppType -> TSTKW . AtomType AtomType                (rule 12)

	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	IDENT          shift, and enter state 15

	AtomType       goto state 45

State 15

	AtomType -> IDENT .                                 (rule 16)

	DOT            reduce using rule 16
	ARROW          reduce using rule 16
	STAR           reduce using rule 16
	COLON          reduce using rule 16
	AT             reduce using rule 16
	LANGLE         reduce using rule 16
	RANGLE         reduce using rule 16
	LBRACE         reduce using rule 16
	RBRACE         reduce using rule 16
	LBRACK         reduce using rule 16
	RBRACK         reduce using rule 16
	LPAREN         reduce using rule 16
	RPAREN         reduce using rule 16
	COMMA          reduce using rule 16
	TINTKW         reduce using rule 16
	TBOOLKW        reduce using rule 16
	TRUE           reduce using rule 16
	FALSE          reduce using rule 16
	NIL            reduce using rule 16
	CONS           reduce using rule 16
	NAT            reduce using rule 16
	IDENT          reduce using rule 16
	EOF            reduce using rule 16


State 16

	%start_parseTermTokens -> term .                    (rule 1)

	%eof           accept


State 17

	term -> Term . EOF                                  (rule 19)
	Term -> Term . COLON TopType                        (rule 26)

	COLON          shift, and enter state 43
	EOF            shift, and enter state 44


State 18

	Term -> AppTerm .                                   (rule 20)
	AppTerm -> AppTerm . AtomTerm                       (rule 27)
	AppTerm -> AppTerm . AT TopType                     (rule 28)
	AppTerm -> AppTerm . LBRACE TermList RBRACE         (rule 29)

	COLON          reduce using rule 20
	AT             shift, and enter state 41
	LANGLE         shift, and enter state 20
	RANGLE         reduce using rule 20
	LBRACE         shift, and enter state 42
	RBRACE         reduce using rule 20
	LPAREN         shift, and enter state 21
	RPAREN         reduce using rule 20
	COMMA          reduce using rule 20
	TRUE           shift, and enter state 24
	FALSE          shift, and enter state 25
	NIL            shift, and enter state 26
	CONS           shift, and enter state 27
	NAT            shift, and enter state 30
	IDENT          shift, and enter state 31
	EOF            reduce using rule 20

	AtomTerm       goto state 40

State 19

	AppTerm -> AtomTerm .                               (rule 32)

	COLON          reduce using rule 32
	AT             reduce using rule 32
	LANGLE         reduce using rule 32
	RANGLE         reduce using rule 32
	LBRACE         reduce using rule 32
	RBRACE         reduce using rule 32
	LPAREN         reduce using rule 32
	RPAREN         reduce using rule 32
	COMMA          reduce using rule 32
	TRUE           reduce using rule 32
	FALSE          reduce using rule 32
	NIL            reduce using rule 32
	CONS           reduce using rule 32
	NAT            reduce using rule 32
	IDENT          reduce using rule 32
	EOF            reduce using rule 32


State 20

	AtomTerm -> LANGLE . Term COMMA Term RANGLE         (rule 39)

	LANGLE         shift, and enter state 20
	LPAREN         shift, and enter state 21
	LAMBDA         shift, and enter state 22
	BIGLAM         shift, and enter state 23
	TRUE           shift, and enter state 24
	FALSE          shift, and enter state 25
	NIL            shift, and enter state 26
	CONS           shift, and enter state 27
	FST            shift, and enter state 28
	SND            shift, and enter state 29
	NAT            shift, and enter state 30
	IDENT          shift, and enter state 31

	Term           goto state 39
	AppTerm        goto state 18
	AtomTerm       goto state 19

State 21

	AtomTerm -> LPAREN . Term RPAREN                    (rule 40)

	LANGLE         shift, and enter state 20
	LPAREN         shift, and enter state 21
	LAMBDA         shift, and enter state 22
	BIGLAM         shift, and enter state 23
	TRUE           shift, and enter state 24
	FALSE          shift, and enter state 25
	NIL            shift, and enter state 26
	CONS           shift, and enter state 27
	FST            shift, and enter state 28
	SND            shift, and enter state 29
	NAT            shift, and enter state 30
	IDENT          shift, and enter state 31

	Term           goto state 38
	AppTerm        goto state 18
	AtomTerm       goto state 19

State 22

	Term -> LAMBDA . IDENT DOT Term                     (rule 21)
	Term -> LAMBDA . IDENT COLON TopType DOT Term       (rule 22)
	Term -> LAMBDA . LBRACE IdentList RBRACE DOT Term    (rule 23)
	Term -> LAMBDA . LBRACE AnnotList RBRACE DOT Term    (rule 24)

	LBRACE         shift, and enter state 36
	IDENT          shift, and enter state 37


State 23

	Term -> BIGLAM . IDENT DOT Term                     (rule 25)

	IDENT          shift, and enter state 35


State 24

	AtomTerm -> TRUE .                                  (rule 34)

	COLON          reduce using rule 34
	AT             reduce using rule 34
	LANGLE         reduce using rule 34
	RANGLE         reduce using rule 34
	LBRACE         reduce using rule 34
	RBRACE         reduce using rule 34
	LPAREN         reduce using rule 34
	RPAREN         reduce using rule 34
	COMMA          reduce using rule 34
	TRUE           reduce using rule 34
	FALSE          reduce using rule 34
	NIL            reduce using rule 34
	CONS           reduce using rule 34
	NAT            reduce using rule 34
	IDENT          reduce using rule 34
	EOF            reduce using rule 34


State 25

	AtomTerm -> FALSE .                                 (rule 35)

	COLON          reduce using rule 35
	AT             reduce using rule 35
	LANGLE         reduce using rule 35
	RANGLE         reduce using rule 35
	LBRACE         reduce using rule 35
	RBRACE         reduce using rule 35
	LPAREN         reduce using rule 35
	RPAREN         reduce using rule 35
	COMMA          reduce using rule 35
	TRUE           reduce using rule 35
	FALSE          reduce using rule 35
	NIL            reduce using rule 35
	CONS           reduce using rule 35
	NAT            reduce using rule 35
	IDENT          reduce using rule 35
	EOF            reduce using rule 35


State 26

	AtomTerm -> NIL .                                   (rule 37)

	COLON          reduce using rule 37
	AT             reduce using rule 37
	LANGLE         reduce using rule 37
	RANGLE         reduce using rule 37
	LBRACE         reduce using rule 37
	RBRACE         reduce using rule 37
	LPAREN         reduce using rule 37
	RPAREN         reduce using rule 37
	COMMA          reduce using rule 37
	TRUE           reduce using rule 37
	FALSE          reduce using rule 37
	NIL            reduce using rule 37
	CONS           reduce using rule 37
	NAT            reduce using rule 37
	IDENT          reduce using rule 37
	EOF            reduce using rule 37


State 27

	AtomTerm -> CONS .                                  (rule 38)

	COLON          reduce using rule 38
	AT             reduce using rule 38
	LANGLE         reduce using rule 38
	RANGLE         reduce using rule 38
	LBRACE         reduce using rule 38
	RBRACE         reduce using rule 38
	LPAREN         reduce using rule 38
	RPAREN         reduce using rule 38
	COMMA          reduce using rule 38
	TRUE           reduce using rule 38
	FALSE          reduce using rule 38
	NIL            reduce using rule 38
	CONS           reduce using rule 38
	NAT            reduce using rule 38
	IDENT          reduce using rule 38
	EOF            reduce using rule 38


State 28

	AppTerm -> FST . AtomTerm                           (rule 30)

	LANGLE         shift, and enter state 20
	LPAREN         shift, and enter state 21
	TRUE           shift, and enter state 24
	FALSE          shift, and enter state 25
	NIL            shift, and enter state 26
	CONS           shift, and enter state 27
	NAT            shift, and enter state 30
	IDENT          shift, and enter state 31

	AtomTerm       goto state 34

State 29

	AppTerm -> SND . AtomTerm                           (rule 31)

	LANGLE         shift, and enter state 20
	LPAREN         shift, and enter state 21
	TRUE           shift, and enter state 24
	FALSE          shift, and enter state 25
	NIL            shift, and enter state 26
	CONS           shift, and enter state 27
	NAT            shift, and enter state 30
	IDENT          shift, and enter state 31

	AtomTerm       goto state 33

State 30

	AtomTerm -> NAT .                                   (rule 33)

	COLON          reduce using rule 33
	AT             reduce using rule 33
	LANGLE         reduce using rule 33
	RANGLE         reduce using rule 33
	LBRACE         reduce using rule 33
	RBRACE         reduce using rule 33
	LPAREN         reduce using rule 33
	RPAREN         reduce using rule 33
	COMMA          reduce using rule 33
	TRUE           reduce using rule 33
	FALSE          reduce using rule 33
	NIL            reduce using rule 33
	CONS           reduce using rule 33
	NAT            reduce using rule 33
	IDENT          reduce using rule 33
	EOF            reduce using rule 33


State 31

	AtomTerm -> IDENT .                                 (rule 36)

	COLON          reduce using rule 36
	AT             reduce using rule 36
	LANGLE         reduce using rule 36
	RANGLE         reduce using rule 36
	LBRACE         reduce using rule 36
	RBRACE         reduce using rule 36
	LPAREN         reduce using rule 36
	RPAREN         reduce using rule 36
	COMMA          reduce using rule 36
	TRUE           reduce using rule 36
	FALSE          reduce using rule 36
	NIL            reduce using rule 36
	CONS           reduce using rule 36
	NAT            reduce using rule 36
	IDENT          reduce using rule 36
	EOF            reduce using rule 36


State 32

	%start_parseTypTokens -> typ .                      (rule 0)

	%eof           accept


State 33

	AppTerm -> SND AtomTerm .                           (rule 31)

	COLON          reduce using rule 31
	AT             reduce using rule 31
	LANGLE         reduce using rule 31
	RANGLE         reduce using rule 31
	LBRACE         reduce using rule 31
	RBRACE         reduce using rule 31
	LPAREN         reduce using rule 31
	RPAREN         reduce using rule 31
	COMMA          reduce using rule 31
	TRUE           reduce using rule 31
	FALSE          reduce using rule 31
	NIL            reduce using rule 31
	CONS           reduce using rule 31
	NAT            reduce using rule 31
	IDENT          reduce using rule 31
	EOF            reduce using rule 31


State 34

	AppTerm -> FST AtomTerm .                           (rule 30)

	COLON          reduce using rule 30
	AT             reduce using rule 30
	LANGLE         reduce using rule 30
	RANGLE         reduce using rule 30
	LBRACE         reduce using rule 30
	RBRACE         reduce using rule 30
	LPAREN         reduce using rule 30
	RPAREN         reduce using rule 30
	COMMA          reduce using rule 30
	TRUE           reduce using rule 30
	FALSE          reduce using rule 30
	NIL            reduce using rule 30
	CONS           reduce using rule 30
	NAT            reduce using rule 30
	IDENT          reduce using rule 30
	EOF            reduce using rule 30


State 35

	Term -> BIGLAM IDENT . DOT Term                     (rule 25)

	DOT            shift, and enter state 73


State 36

	Term -> LAMBDA LBRACE . IdentList RBRACE DOT Term    (rule 23)
	Term -> LAMBDA LBRACE . AnnotList RBRACE DOT Term    (rule 24)

	IDENT          shift, and enter state 72

	IdentList      goto state 70
	AnnotList      goto state 71

State 37

	Term -> LAMBDA IDENT . DOT Term                     (rule 21)
	Term -> LAMBDA IDENT . COLON TopType DOT Term       (rule 22)

	DOT            shift, and enter state 68
	COLON          shift, and enter state 69


State 38

	Term -> Term . COLON TopType                        (rule 26)
	AtomTerm -> LPAREN Term . RPAREN                    (rule 40)

	COLON          shift, and enter state 43
	RPAREN         shift, and enter state 67


State 39

	Term -> Term . COLON TopType                        (rule 26)
	AtomTerm -> LANGLE Term . COMMA Term RANGLE         (rule 39)

	COLON          shift, and enter state 43
	COMMA          shift, and enter state 66


State 40

	AppTerm -> AppTerm AtomTerm .                       (rule 27)

	COLON          reduce using rule 27
	AT             reduce using rule 27
	LANGLE         reduce using rule 27
	RANGLE         reduce using rule 27
	LBRACE         reduce using rule 27
	RBRACE         reduce using rule 27
	LPAREN         reduce using rule 27
	RPAREN         reduce using rule 27
	COMMA          reduce using rule 27
	TRUE           reduce using rule 27
	FALSE          reduce using rule 27
	NIL            reduce using rule 27
	CONS           reduce using rule 27
	NAT            reduce using rule 27
	IDENT          reduce using rule 27
	EOF            reduce using rule 27


State 41

	AppTerm -> AppTerm AT . TopType                     (rule 28)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 65
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 42

	AppTerm -> AppTerm LBRACE . TermList RBRACE         (rule 29)

	LANGLE         shift, and enter state 20
	LPAREN         shift, and enter state 21
	LAMBDA         shift, and enter state 22
	BIGLAM         shift, and enter state 23
	TRUE           shift, and enter state 24
	FALSE          shift, and enter state 25
	NIL            shift, and enter state 26
	CONS           shift, and enter state 27
	FST            shift, and enter state 28
	SND            shift, and enter state 29
	NAT            shift, and enter state 30
	IDENT          shift, and enter state 31

	Term           goto state 63
	AppTerm        goto state 18
	AtomTerm       goto state 19
	TermList       goto state 64

State 43

	Term -> Term COLON . TopType                        (rule 26)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 62
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 44

	term -> Term EOF .                                  (rule 19)

	%eof           reduce using rule 19


State 45

	AppType -> TSTKW AtomType . AtomType                (rule 12)

	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	IDENT          shift, and enter state 15

	AtomType       goto state 61

State 46

	AtomType -> LPAREN TopType . RPAREN                 (rule 18)

	RPAREN         shift, and enter state 60


State 47

	AtomType -> LBRACK TopType . RBRACK                 (rule 17)

	RBRACK         shift, and enter state 59


State 48

	TopTypeList -> TopType . COMMA TopTypeList          (rule 8)
	TopTypeList -> TopType .                            (rule 9)

	RBRACE         reduce using rule 9
	COMMA          shift, and enter state 58


State 49

	UncOrArrType -> LBRACE TopTypeList . RBRACE ARROW TopType    (rule 5)

	RBRACE         shift, and enter state 57


State 50

	TopType -> FORALL IDENT . DOT TopType               (rule 3)

	DOT            shift, and enter state 56


State 51

	UncOrArrType -> ProdType ARROW . TopType            (rule 6)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 55
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 52

	ProdType -> ProdType STAR . AppType                 (rule 10)

	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	AppType        goto state 54
	AtomType       goto state 7

State 53

	typ -> TopType EOF .                                (rule 2)

	%eof           reduce using rule 2


State 54

	ProdType -> ProdType STAR AppType .                 (rule 10)

	DOT            reduce using rule 10
	ARROW          reduce using rule 10
	STAR           reduce using rule 10
	COLON          reduce using rule 10
	AT             reduce using rule 10
	LANGLE         reduce using rule 10
	RANGLE         reduce using rule 10
	LBRACE         reduce using rule 10
	RBRACE         reduce using rule 10
	RBRACK         reduce using rule 10
	LPAREN         reduce using rule 10
	RPAREN         reduce using rule 10
	COMMA          reduce using rule 10
	TRUE           reduce using rule 10
	FALSE          reduce using rule 10
	NIL            reduce using rule 10
	CONS           reduce using rule 10
	NAT            reduce using rule 10
	IDENT          reduce using rule 10
	EOF            reduce using rule 10


State 55

	UncOrArrType -> ProdType ARROW TopType .            (rule 6)

	DOT            reduce using rule 6
	COLON          reduce using rule 6
	AT             reduce using rule 6
	LANGLE         reduce using rule 6
	RANGLE         reduce using rule 6
	LBRACE         reduce using rule 6
	RBRACE         reduce using rule 6
	RBRACK         reduce using rule 6
	LPAREN         reduce using rule 6
	RPAREN         reduce using rule 6
	COMMA          reduce using rule 6
	TRUE           reduce using rule 6
	FALSE          reduce using rule 6
	NIL            reduce using rule 6
	CONS           reduce using rule 6
	NAT            reduce using rule 6
	IDENT          reduce using rule 6
	EOF            reduce using rule 6


State 56

	TopType -> FORALL IDENT DOT . TopType               (rule 3)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 86
	UncOrArrType   goto state 4
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 57

	UncOrArrType -> LBRACE TopTypeList RBRACE . ARROW TopType    (rule 5)

	ARROW          shift, and enter state 85


State 58

	TopTypeList -> TopType COMMA . TopTypeList          (rule 8)

	FORALL         shift, and enter state 8
	LBRACE         shift, and enter state 9
	LBRACK         shift, and enter state 10
	LPAREN         shift, and enter state 11
	TINTKW         shift, and enter state 12
	TBOOLKW        shift, and enter state 13
	TSTKW          shift, and enter state 14
	IDENT          shift, and enter state 15

	TopType        goto state 48
	UncOrArrType   goto state 4
	TopTypeList    goto state 84
	ProdType       goto state 5
	AppType        goto state 6
	AtomType       goto state 7

State 59

	AtomType -> LBRACK TopType RBRACK .                 (rule 17)

	DOT            reduce using rule 17
	ARROW          reduce using rule 17
	STAR           reduce using rule 17
	COLON          reduce using rule 17
	AT             reduce using rule 17
	LANGLE         reduce using rule 17
	RANGLE         reduce using rule 17
	LBRACE         reduce using rule 17
	RBRACE         reduce using rule 17
	LBRACK         reduce using rule 17
	RBRACK         reduce using rule 17
	LPAREN         reduce using rule 17
	RPAREN         reduce using rule 17
	COMMA          reduce using rule 17
	TINTKW         reduce using rule 17
	TBOOLKW        reduce using rule 17
	TRUE           reduce using rule 17
	FALSE          reduce using rule 17
	NIL            reduce using rule 17
	CONS           reduce using rule 17
	NAT            reduce using rule 17
	IDENT          reduce using rule 17
	EOF            reduce using rule 17


State 60

	AtomType -> LPAREN TopType RPAREN .                 (rule 18)

	DOT            reduce using rule 18
	ARROW          reduce using rule 18
	STAR           reduce using rule 18
	COLON          reduce using rule 18
	AT             reduce using rule 18
	LANGLE         reduce using rule 18
	RANGLE         reduce using rule 18
	LBRACE         reduce using rule 18
	RBRACE         reduce using rule 18
	LBRACK         reduce using rule 18
	RBRACK         reduce using rule 18
	LPAREN         reduce using rule 18
	RPAREN         reduce using rule 18
	COMMA          reduce using rule 18
	TINTKW         reduce using rule 18
	TBOOLKW        reduce using rule 18
	TRUE           reduce using rule 18
	FALSE          reduce using rule 18
	NIL            reduce using rule 18
	CONS           reduce using rule 18
	NAT            reduce using rule 18
	IDENT          reduce using rule 18
	EOF            reduce using rule 18


State 61

	AppType -> TSTKW AtomType AtomType .                (rule 12)
